# SQLRite

./: .dockerignore  .gitignore  BENCHMARK_STATUS.md  CHANGELOG.md  Cargo.toml  Dockerfile  PROJECT_README.md  README.md  ROADMAP.md  ROADMAP_COMPETITIVE_2026.md  bench_10k_weighted_bruteforce.json  bench_matrix_100k_v3.json  bench_matrix_100k_v4.json  bench_matrix_10k_v12.json  bench_matrix_10k_v14.json  bench_matrix_10k_v2.json  bench_matrix_10k_v3.json  bench_matrix_10k_v4.json  bench_matrix_10k_v5.json  bench_matrix_10k_v7.json  bench_matrix_10k_v8.json  bench_matrix_quick.json  bench_matrix_quick_readme.json  bench_matrix_quick_v4.json  bench_matrix_quick_v5.json  bench_matrix_quick_v8.json  build.rs  eval_report.json  eval_report_lsh_ann.json  eval_report_readme.json
.github/workflows/: agent-integrations.yml  api-compatibility.yml  ci.yml  ga-release-train.yml  installer-smoke.yml  migration-toolchain.yml  packaging-channels.yml  perf-nightly.yml  performance-p0-p1.yml  performance-phase6-quantization.yml  performance-phase7-hybrid-planner.yml  performance-phase8-competitor-comparison.yml  performance-phase8-filtered-benchmarks.yml  performance-phase8-filtered-concurrency.yml  performance-phase8-filtered-sweep.yml  python-sdk.yml  query-profile-hints.yml  release-bootstrap.yml  release-candidate-audit.yml  security-audit-hardening.yml  security-rbac.yml  sql-v2-api-migrations.yml  typescript-sdk.yml
benchmarks/: README.md  status.md
benchmarks/profiles/: 100k.json  10k.json  10m.json  1m.json
benchmarks/results/: README.md
crates/sqlrite-sdk-core/: Cargo.toml  README.md
crates/sqlrite-sdk-core/src/: lib.rs
deploy/: docker-compose.seeded-demo.yml
deploy/ha/: README.md  docker-compose.reference.yml  k8s-service.yaml  k8s-statefulset.yaml  prometheus.yml
docs/: README.md  distribution.md  embedded.md  examples.md  getting-started.md  ingestion.md  migrations.md  operations.md  packaging_channels.md  performance.md  performance_v2.md  querying.md  release_policy.md  runtime_config_profiles.md  security.md  server-api.md  sql.md  sql_cookbook.md
docs/architecture/: ha_replication_reference.md
docs/contracts/: api_freeze_v1.json
docs/migrations/: api_first_vector_db_patterns.md  pgvector_to_sqlrite.md  sqlite_to_sqlrite.md
docs/runbooks/: api_compatibility_freeze.md  ga_release_train.md  grpc_query_service.md  ha_control_plane.md  migration_cli_workflow.md  query_profile_hints.md  release_candidate_hardening.md
docs/security/: compliance_posture.md  threat_model.md
example_docs/: README.md
example_docs/agent_integrations/: mcp_memory_agent.md  python_memory_agent.md  typescript_memory_agent.md
example_docs/core_examples/: basic_search.md  ingestion_worker.md  secure_tenant.md  (+3 more)
examples/: basic_search.rs  eval_dataset.json  ingestion_worker.rs  query_use_cases.rs  secure_tenant.rs  security_rotation_workflow.rs  tool_adapter.rs
official_docs/: README.md
project_docs/: README.md  packaging_channels.md  release_policy.md
project_plan/: README.md  coverage_matrix.md  generate_plan.sh  requirements_catalog.tsv  sprint_metadata.tsv
scripts/: create-release-archive.sh  generate-homebrew-formula.sh  generate-winget-manifests.sh  package-linux.sh  run-benchmark-bundle.sh  run-p0-p1-performance-suite.sh  run-p6-quantization-suite.sh  run-p7-hybrid-planner-suite.sh  run-p8-competitor-suite.py  run-p8-competitor-suite.sh  run-p8-filtered-benchmark-suite.sh  run-p8-filtered-concurrency-suite.sh  run-p8-filtered-sweep-suite.sh  run-s16-failover-chaos-smoke.sh  run-s17-backup-pitr-smoke.sh  run-s18-observability-smoke.sh  run-s19-dr-gameday.sh  run-s20-mcp-smoke.sh  run-s21-openapi-grpc-smoke.sh  run-s22-grpc-sdk-smoke.sh  run-s23-python-sdk-smoke.sh  run-s24-typescript-sdk-smoke.sh  run-s25-agent-contract-suite.sh  run-s25-agent-memory-setup.sh  run-s25-release-gate-review.sh  run-s26-api-compat-suite.sh  run-s27-security-rbac-smoke.sh  run-s28-security-audit-hardening.sh  run-s29-query-profile-hints.sh  run-s30-migration-suite.sh  run-s31-sql-v2-and-api-migrations.sh  run-s32-release-candidate-audit.sh  run-s33-ga-release-train.sh  run-sql-cookbook-conformance.sh  sqlrite-global-install.sh  sqlrite-global-update.sh  sqlrite-install.sh
sdk/python/: README.md  pyproject.toml
sdk/python/sqlrite_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
src/: adapter.rs  bench.rs  error.rs  eval.rs  grpc.rs  ha.rs  ingest.rs  lib.rs  main.rs  mcp.rs  migrate.rs  ops.rs  reindex.rs  sdk_runtime.rs  security.rs  server.rs  sql_semantics.rs  vector_index.rs
(+289 files in other folders)
