[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlrite-sdk"
version = "1.0.1"
description = "Python SDK for SQLRite query and SQL APIs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SQLRite" }]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sqlrite_sdk*"]
